@@ -1,5 +1,5 @@
 
-Copyright (c) 1999-2019, Douglas Gilbert
+Copyright (c) 1999-2022, Douglas Gilbert
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
