@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "December 2021" "sg3_utils\-1.48" SG3_UTILS
+.TH SG3_UTILS "8" "January 2022" "sg3_utils\-1.48" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
@@ -839,7 +839,7 @@ CREDITS file and individual source files (in the 'src' directory).
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 1999\-2021 Douglas Gilbert
+Copyright \(co 1999\-2022 Douglas Gilbert
 .br
 Some utilities are distributed under a GPL version 2 license while
 others, usually more recent ones, are under a FreeBSD license. The files
