@@ -84,7 +84,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Fri Dec 31 2021 - dgilbert at interlog dot com
+* Sat Jan 01 2022 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.48
 
