@@ -2,7 +2,7 @@ sg3-utils (1.48-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 31 Dec 2021 13:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 01 Jan 2022 13:00:00 -0500
 
 sg3-utils (1.47-0.1) unstable; urgency=low
 
