@@ -2,7 +2,10 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for pre-release sg3_utils-1.48 [20211230] [svn: r928]
+Changelog for pre-release sg3_utils-1.48 [20220103] [svn: r929]
+  - rescan-scsi-bus.sh: with '-r' it crashed due to change in
+    rev 867 in sg_inq.c from Device_type= to PDT= .
+    Change script to use either
   - sg_z_act_query: new utility for sending either a
     Zone activate or Zone query command
   - sg_rep_zones: add Report zone starting LBA granularity
